Thesis: finished describing the most important metatheoretical properties of type theory.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -287,34 +287,35 @@ We didn't discuss substitution in our presentation of type theory, but there are
 
 Of course our presentation of type theory is far from being complete -- to be, we would have to list all the formation, introduction, elimination, computation and uniqueness rules for all types. If we also diligently list all the boring congruence rules, the number of inference rules can easily surpass one hundred. But even though a full formal presentation of type theory is massive, the basic idea behind it is very simple and beautiful.
 
-Having discussed how type theory works, we would also want to take a look at all the pleasant metatheoretic properties it enjoys. To state most of them, we will need to view computation from a different angle, by properly describing what it means that a term $t$ computes to a term $t'$ (in a single computation step). The definition of this relation (which we write as $t \leadsto t'$) is pretty simple, but very long to state precisely. The most important rules for $\leadsto$ correspond to left-to-right readings of computation rules for term convertibility. Besides, there is also a huge number of congruence rules which can easily be derived from the congruence rules for term convertibility (but do not correspond to them directly).
+Having discussed how type theory works, we would also want to take a look at all the pleasant metatheoreticalproperties it enjoys. To state most of them, we will need to view computation from a different angle, by properly describing what it means that a term $t$ computes\footnote{This relation is sometimes also called ``reduction'' or ``simplification'', but we consider these to be a misnomer, because in general computation needs not decrease any perceived measure of size or complexity.} to a term $t'$ (in a single computation step). The definition of this relation (which we write as $t \leadsto t'$) is pretty simple, but very long to state precisely. The most important rules for $\leadsto$ correspond to left-to-right readings of computation rules for term convertibility. Besides, there is also a huge number of congruence rules which can easily be derived from the congruence rules for term convertibility (but do not correspond to them directly).
 
 Let's see how this looks for natural numbers. We have $\recN{X}{z}{s}{0} \leadsto z$ and $\recN{X}{z}{s}{\suc{n}} \leadsto s(\recN{X}{z}{s}{n})$, which correspond to the computation rules.\footnote{For functions, we would also have $\lambda x.f(x) \leadsto f$, which corresponds to the uniqueness rule.} There also are the congruence rules, although this time they look differently from these for the term convertibility judgement. First, there are congruence rules for the introduction rules: given $n \leadsto n'$ we have $\suc{n} \leadsto \suc{n'}$. Second, there are congruence rules for the elimination rule: given $z \leadsto z'$, we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z'}{s}{n}$; given $s \leadsto s'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z}{s'}{n}$; and given $n \leadsto n'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X}{z}{s}{n'}$. The last congruence rule we need says that given $X \leadsto X'$ we have $\recN{X}{z}{s}{n} \leadsto \recN{X'}{z}{s}{n}$.
 
 This leads us to consider the last ingredient we need in our description of computation, namely type computation. To denote that the type $A$ reduces to $A'$ in a single computation step, we write $A \leadsto A'$. The rules for type computation are not very interesting and consist exclusively of congruence rules.\footnote{The interesting cases of type-level computation, like computing a type by recursion on a natural number, are already covered by rules for term computation.} There aren't any congruence rules for $\N$, but for $\m{Fin}$ given $n \leadsto n'$ we have $\Fin{n} \leadsto \Fin{n'}$, whereas for function types we have two rules: given $A \leadsto A'$ we have $A \to B \leadsto A' \to B$; and given $B \leadsto B'$ we have $A \to B \leadsto A \to B'$. We now know enough about computation to state all the interesting metatheorems.
 
-The most important metatheoretic property of type theory, called strong normalization, is that the converse of the relation $\leadsto$ is well-founded. Stated more explicitly, strong normalization says that all sequences of computation steps of the form $t_0 \leadsto t_1 \leadsto \dots$ are finite. Even more explicitly, this means that every term $t$ has a normal form, i.e. after a finite number of computation steps (no matter in which order these steps are performed) it eventually computes to some term $t'$ which doesn't compute anymore.
+The most important metatheoreticalproperty of type theory, called strong normalization, is that the converse of the relation $\leadsto$ is well-founded. Stated more explicitly, strong normalization says that all sequences of computation steps of the form $t_0 \leadsto t_1 \leadsto \dots$ are finite. Even more explicitly, this means that every term $t$ has a normal form, i.e. after a finite number of computation steps (no matter in which order these steps are performed) it eventually computes to some term $t'$ which doesn't compute anymore.
 
-The next important metatheoretic property of type theory, called confluence, says that if $t \leadsto^* t_1$ and $t \leadsto^* t_2$, then there exists a term $t'$ such that $t_1 \leadsto^* t'$ and $t_2 \leadsto^* t'$. Here the relation $\leadsto^*$ denotes the reflexive-transitive closure of $\leadsto$, i.e. $t \leadsto^* t'$ means that $t$ computes to $t'$ after zero or more computation steps. In ordinary words, confluence is a kind of generalized determinism -- the computation relation $\leadsto$ is not deterministic, but if a term computes to two different terms, these will in turn, sooner or later, compute to the same term. To paraphrase once more: confluence means that every term $t$ has at most one normal form.
+The next important metatheoreticalproperty of type theory, called confluence, says that if $t \leadsto^* t_1$ and $t \leadsto^* t_2$, then there exists a term $t'$ such that $t_1 \leadsto^* t'$ and $t_2 \leadsto^* t'$. Here the relation $\leadsto^*$ denotes the reflexive-transitive closure of $\leadsto$, i.e. $t \leadsto^* t'$ means that $t$ computes to $t'$ after zero or more computation steps. In ordinary words, confluence is a kind of generalized determinism -- the computation relation $\leadsto$ is not deterministic, but if a term computes to two different terms, these will in turn, sooner or later, compute to the same term. To paraphrase once more: confluence means that every term $t$ has at most one normal form.
 
-We can summarize strong normalization and confluence in one sentence by saying that ``every term has a unique normal form''. These normal forms can be described explicitly: they are generated by introduction rules\footnote{And also formation rules, when we're talking about types.} and elimination rules applied to variables. For example, some terms of type $\N$ in normal form are $0$ (zero), $\suc{\suc{n}}$ (successor of the successor of a variable), $\recN{X}{z}{s}{n}$ (recursor applied to a variable, provided that $X$, $z$ and $s$ are in normal form), etc.
+We can summarize strong normalization and confluence in one sentence by saying that ``every term has a unique normal form''. These normal forms can be characterized explicitly: they are generated by introduction rules\footnote{And also formation rules, when we're talking about types.} and elimination rules applied to variables. For example, some terms of type $\N$ in normal form are $0$, $\suc{\suc{n}}$ and $\recN{X}{z}{s}{n}$ (provided that $X$, $z$ and $s$ are in normal form; in both previous terms $n$ is a variable). The situation gets even simpler for closed terms, i.e. terms in the empty context. Because there are no variables in the empty context, closed normal forms can be neither variables nor elimination rules applied to variables -- they must start with an introduction rule.
 
-The situation gets even simpler in the empty context: there are no variables in the empty context, so normal forms can't be variables, and because there are no variables, normal forms can't be elimination rules applied to variables either. So, in the empty context all normal forms start with an introduction rule. The metatheoretic property that expresses this is called ``progress'': in the empty context, every term $t$ either starts with an introduction rule or there is another term $t'$ to which $t$ computes.
+There's a (very rarely stated) metatheoreticalproperty related to the above characterization, called ``progress'': every closed term $t$ either starts with an introduction rule or there is another term $t'$ to which $t$ computes. Intuitively, this means that the computation of every closed term progresses towards a normal form which is well-defined, rather than a normal form that can't compute anymore because the rules of type theory were designed badly.
 
-But how do we know which normal forms correspond to which types? This may seem obvious, but we actually need two other very important properties related to types to establish this. The first one is uniqueness of types: if we have $\term{\Gamma}{t}{A}$ and $\term{\Gamma}{t}{A'}$, then we can derive $\typeconv{\Gamma}{A}{A'}$. Intuitively: the type of every term is unique. The second property is called either  ``(type) preservation'' or ``subject reduction'', and says that if $\term{\Gamma}{t}{A}$ and $t \leadsto t'$, then we can derive $\term{\Gamma}{t'}{A}$. This one is also easy to grasp intuitively -- it means that the computation of a term preserves its type.
+Note that even though normal forms in the empty context start with an introduction rule, they aren't made only of introduction rules. The culprit here are functions, whose normal forms can look like $\lambda n. \recN{X}{z}{s}{n}$ (provided that $X$, $z$ and $s$ are in normal form) -- they start with a lambda (the introduction rule), but then there is an elimination rule applied to a variable bound by the lambda. These observations are very important to be able to correctly state the second most important metatheoreticalproperty of type theory, called canonicity: every closed term of base type computes to canonical form. Here, a base type is any type in the empty context besides the (dependent) function type and a canonical form is a term generated solely by introduction rules.
 
-The two above properties basically establish that the normal forms of $\N$ are generated by $0$, $\m{suc}$ and (in a non-empty context) $\m{rec}_\N$ and variables. Note that even though normal forms in the empty context start with an introduction rule, they aren't made only of introduction rules. The culprit here is the function type, whose normal forms can look like $\lambda n. \recN{X}{z}{s}{n}$ (provided that $z$ and $s$ are in normal form) -- it starts with an introduction rule, but then follows an elimination rule applied to a variable bound by the lambda. We thus define a base type to be basically any type besides the (dependent) function type. A canonical form is a term generated solely by introduction rules. This allows us to state the second most important metatheoretic property of type theory, called canonicity: in the empty context, a term of a base type computes to canonical form.
+But how do we know which normal/canonical forms correspond to which types? This may seem obvious, but to establish the obvious we actually need two more metatheoreticalproperties, concerned with types. The first one is uniqueness of types: if we have $\term{\Gamma}{t}{A}$ and $\term{\Gamma}{t}{A'}$, then we can derive $\typeconv{\Gamma}{A}{A'}$. Intuitively: the type of every term is unique. The second property is called either  ``(type) preservation'' or ``subject reduction'', and says that if $\term{\Gamma}{t}{A}$ and $t \leadsto t'$, then we can derive $\term{\Gamma}{t'}{A}$. This one is also easy to grasp intuitively -- it means that the computation of a term doesn't change its type.
 
-An immediate corollary of canonicity is consistency of type theory as a logic, i.e. in the empty context we can't construct a term of the empty type. Let's assume to the contrary that type theory is inconsistent, i.e. that we have some $\term{}{e}{\Empty}$. But then, by canonicitiy, $e$ computes to a canonical form, which means that $e$ starts with one of the introduction rules for type $\Empty$. But there are no such rules for $\Empty$! Therefore, we have a contradiction and type theory is consistent.
+Together with the two above properties, canonicity basically says that every closed term of type $\N$ computes to a numeral ($0, \suc{0}, \suc{\suc{0}}, \dots$ i.e. $0, 1, 2, \dots$), every closed term of the boolean type computes to \m{true} or \m{false} and so on. This is an extremely important property, because canonical forms are what programmers (and mathematicians) think of when they think about a given type. For example, people tend to think about the type $\N$ of natural numbers in terms of... well, the \textit{actual} natural numbers ($0, 1, 2, \dots$), and not in terms of expressions like $2 + 2$ or $(\lambda n. n + 5)\ 37$ which only eventually \textit{compute} to a natural number. The importance of canonicity stems from the fact that it validates this widespread intuitive way of thinking.
 
-Coq's logic\footnote{By Coq's logic we mean its term language, Gallina.} is consistent, which means that it is impossible to prove \m{False} in the empty context. This fact follows from a property enjoyed by Coq, called canonicity: every term in the empty context evaluates to a canonical form in a finite number of computation steps, no matter in what order these steps are carried out. A canonical form is what we intuitively expect the final result of a computation to look like: for natural numbers, the canonical forms are $0, 1, 2, \dots$ (i.e. $\m{0}, \m{\suc{0}}, \m{\suc{\suc{0}}}, \dots$), for booleans they are \m{true} and \m{false} and so on. In general, the canonical forms of an inductive type are generated by its constructors.
+This is how the above metatheorems work in general -- they validate intuitions widely held by programmers and mathematicians. When presented with an object, these people usually think of it as being of a particular type, which is unique (uniqueness of types).\footnote{The common exception in programming is subtyping, which is also present in mathematical thinking, for example when identifying a natural number with its corresponding integer.} When presented with $n :\ \N$, they think of it as a number and not a program that computes a number (canonicity). When programmers think of $n :\ \N$ as a program, they usually assume that it terminates\footnote{Nontermination ascends to programmers' consciousness mostly when dealing with bugs.} (strong normalization) and that its type doesn't change during computation (type preservation).\footnote{Implicit casts, which change the type of the object on which they act, are a common source of errors in languages that have them, as programmers often overlook them.} They also mostly think that computation happens in a fixed order and leads to a deterministic result (confluence)\footnote{Provided they are not dealing with concurrency, randomness or other side effects.} which is meaningful and not some gibberish (progress).
 
+An immediate corollary of these metatheoretical properties is consistency of type theory as a logic, which means that we can't construct a closed term of the empty type. Let's assume to the contrary that type theory is inconsistent, i.e. that we have some $\term{}{e}{\Empty}$. But then, by canonicity, $e$ computes to a canonical form, which means that $e$ starts with one of the introduction rules for type $\Empty$. But there are no such rules for $\Empty$! Therefore, we have a contradiction and type theory is consistent.
 
+But this is not the end -- there is more to the metatheory of type theory than just validating intuitions and expectations. In addition to that, the properties we have seen also have some more practical consequences. 
 
+% An astute reader has probably noticed that we sneaked into the above description a word that is familiar but was not defined, namely ``element''. The elements of a type $A$ are its closed terms that are in normal form. A term is closed if its context is empty and it is in normal form if it is the final result of evaluation, i.e. it can't be evaluated any further.
 
-An astute reader has probably noticed that we sneaked into the above description a word that is familiar but was not defined, namely ``element''. The elements of a type $A$ are its closed terms that are in normal form. A term is closed if its context is empty and it is in normal form if it is the final result of evaluation, i.e. it can't be evaluated any further.
-
-For example, $\term{}{4}{\N}$ is a closed term in normal form, $\term{}{2 + 2}{\N}$ is a closed term that is not in normal form and $\term{n : \N}{\suc{n}}{\N}$ is a term in normal form, but it is not closed because it depends on the assumption $n : \N$ (such terms are called open). It turns out that for natural numbers, the elements are precisely $0, \suc{0}, \suc{\suc{0}}, \suc{\suc{\suc{0}}}, \dots$ which we can interpret as $0, 1, 2, 3, \dots$ respectively. So, the elements of the type of natural numbers are precisely the natural numbers. Who would have guessed!
+% For example, $\term{}{4}{\N}$ is a closed term in normal form, $\term{}{2 + 2}{\N}$ is a closed term that is not in normal form and $\term{n : \N}{\suc{n}}{\N}$ is a term in normal form, but it is not closed because it depends on the assumption $n : \N$ (such terms are called open). It turns out that for natural numbers, the elements are precisely $0, \suc{0}, \suc{\suc{0}}, \suc{\suc{\suc{0}}}, \dots$ which we can interpret as $0, 1, 2, 3, \dots$ respectively. So, the elements of the type of natural numbers are precisely the natural numbers. Who would have guessed!
 
 The explanation of elements prompts us to change our perspective on type theory from a model of computation back to foundational and pose the following question: what is the relation between type theory and set theory? After all, types have elements and sets have elements too. Below, we provide a short comparison.
 
@@ -800,14 +801,9 @@ This is because, in accordance with concept/technique \#2, we ignored the matter
 
 \section{The inductive domain method} \label{inductivedomain}
 
-How do we prove that our algorithm terminates? Before we tackle this question, let's first recall \textit{why} we have to prove it: in short, to avoid inconsistency. 
-
 % TODO
 
-
-
-
-the only form of recursion allowed in Coq is \textit{structural recursion}, i.e. one in which recursive calls are made on subterms of the principal argument. Because terms are finite, this guarantees that all structurally recursive programs terminate and from termination follows the consistency of Coq's logic.\footnote{To be more precise, consistency (i.e. we can't prove \m{False}) follows from strong normalization (which says that all terms have a normal form, i.e. all } Thus, on the one hand, the restriction to structural recursion protects us from contradiction (and from other evils too), but on the other hand it can be quite inconvenient from the pragmatic programmer's point of view.
+How do we prove that our algorithm terminates? Before we tackle this question, let's first recall \textit{why} we have to prove it: the only form of recursion allowed in Coq is \textit{structural recursion}, i.e. one in which recursive calls are made on subterms of the principal argument. Because terms are finite, this guarantees that all structurally recursive programs terminate and from termination follows the consistency of Coq's logic.\footnote{To be more precise, consistency (i.e. we can't prove \m{False}) follows from strong normalization (which says that all terms have a normal form, i.e. all } Thus, on the one hand, the restriction to structural recursion protects us from contradiction (and from other evils too), but on the other hand it can be quite inconvenient from the pragmatic programmer's point of view.
 
 Structural recursion is to be contrasted with \textit{general recursion}, found in most programming languages, in which arguments of recursive calls can be arbitrary. This is very convenient for the pragmatic programmer, because it doesn't constrain him at all, but renders the language inconsistent as a logic, and thus absolutely useless for formal reasoning.\footnote{Note, however, that an inconsistent language can still be useful for the purpose of \textit{rigorous} reasoning. See \cite{FastAndLoose} for details.} Consider Haskell's \m{Void} type, for example, which is supposed to be empty, just like its Coq equivalent \m{False}. There is no direct way of making an element of \m{Void}, but using general recursion we can easily define a nonterminating function \m{f\ ::\ a -> Void} (for example by setting \m{f x = f x}), which we can then use to obtain an element of \m{Void} (for example \m{f ()\ ::\ Void}).
 
