Thesis: not that much...

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -311,11 +311,13 @@ This is how the above metatheorems work in general -- they validate intuitions w
 
 An immediate corollary of these metatheoretical properties is consistency of type theory as a logic, which means that we can't construct a closed term of the empty type. Let's assume to the contrary that type theory is inconsistent, i.e. that we have some $\term{}{e}{\Empty}$. But then, by canonicity, $e$ computes to a canonical form, which means that $e$ starts with one of the introduction rules for type $\Empty$. But there are no such rules for $\Empty$! Therefore, we have a contradiction and type theory is consistent.
 
-But this is not the end -- there is more to the metatheory of type theory than just validating intuitions and expectations. In addition to that, the properties we have seen also have some more practical consequences. 
+%Another immediate corollary is that it is not possible to prove the Law of Excludded Middle, i.e. $\forall A :\ \m{Type}, A + \neg A$. Assume to the contrary that it can be proven. Then the proof computes to normal form which is $\lambda A :\ \m{Type}. e$. Because there is no eliminator for the universe \m{Type}, we know that $e$ must start with one of the introduction rules for $+$. On the one hand, if it's $\m{inl}\ e'$ for some $e' :\ A$, then all types are inhabited, a contradiction (we know that $\Empty$ is not inhabited). On the other hand, if it's of the form $\m{inr}\ e'$ for some $e' : \neg A$, then all types are empty, which is also a contradiction.
 
-% An astute reader has probably noticed that we sneaked into the above description a word that is familiar but was not defined, namely ``element''. The elements of a type $A$ are its closed terms that are in normal form. A term is closed if its context is empty and it is in normal form if it is the final result of evaluation, i.e. it can't be evaluated any further.
+Consistency is not the only corollary of these metatheoretical properties -- there is more to them than just validating intuitions and expectations. In addition to that, the properties we have seen also have some more practical consequences -- they guarantee the judgements of type theory are decidable, which in turn guarantees that type theory can be efficiently implemented on a computer.
 
-% For example, $\term{}{4}{\N}$ is a closed term in normal form, $\term{}{2 + 2}{\N}$ is a closed term that is not in normal form and $\term{n : \N}{\suc{n}}{\N}$ is a term in normal form, but it is not closed because it depends on the assumption $n : \N$ (such terms are called open). It turns out that for natural numbers, the elements are precisely $0, \suc{0}, \suc{\suc{0}}, \suc{\suc{\suc{0}}}, \dots$ which we can interpret as $0, 1, 2, 3, \dots$ respectively. So, the elements of the type of natural numbers are precisely the natural numbers. Who would have guessed!
+First, we can easily decide whether $\type{\Gamma}{A}$ is derivable -- to do this, we need to compute $A$ to normal form and then check if it was correctly built according to the formation rules, which is easy for types in normal form. It follows that the judgement $\context{\Gamma}$ is also decidable -- it suffices to check whether all types that occur in $\Gamma$ are well-formed. The typing judgement $\term{\Gamma}{t}{A}$ is decidable too - to decide whether it holds, we need to compute both $t$ and $A$ to normal form, and then check whether $t$ was built with the introduction and elimination rules that correspond to type $A$ -- again, this is easy for normal forms.
+
+Second, confluence yields as a corollary the fact that two terms are convertible when they compute to the same normal form and an analogous one for types -- they are convertible when they compute to the same normal 
 
 The explanation of elements prompts us to change our perspective on type theory from a model of computation back to foundational and pose the following question: what is the relation between type theory and set theory? After all, types have elements and sets have elements too. Below, we provide a short comparison.
 
