--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -452,7 +452,7 @@ So, how can we formally define the proposition ``the list of natural numbers $l$
 
 This is exactly what the above definition says. We start by defining an auxiliary function named \m{nth}, which returns the \m{n}-th element of the list \m{l} (wrapped in the \m{option} constructor \m{Some}) or \m{None} if the list is not long enough to have an \m{n}-th element. Note that the use of \m{option} in the return type is necessary because we always need to return a result and, if the return type were just \m{A}, this wouldn't be possible for the empty list as we can't conjure an element of \m{A} out of nowhere. Moreover, in Coq pattern matching has to be exhaustive, i.e. all cases must be covered, so we can't just omit the case of empty list.\footnote{Type theories usually don't have pattern matching, but when they do, it must be exhaustive too.} Neither can we throw an exception, because in Coq (and in type theory) exceptions are not allowed.
 
-Then comes the definition of sortedness itself: the list \m{l} is sorted when, for any two indices \m{i} and \m{j} such that \m{i} comes before \m{j}, if the \m{i}-th element of \m{l} is \m{n} and the \m{j}-th element of \m{l} is \m{m}, then \m{n} is less than or equal to \m{m}. This definition looks quite correct (and it is), but it won't serve us well. This is because it defies the second part of our advice \#0 -- it is not easy to use. The reason why will be rather elusive for people who are not Coq experts,\footnote{Knowing at first sight that a definition like this one will later turn out to be quite clumsy requires precisely the kind of insight mentioned before that can't be packed into a repetitive, mindless technique.} but I will nonetheless try to give an appealing argument.
+Then comes the definition of sortedness itself: the list \m{l} is sorted when, for any two indices \m{i} and \m{j} such that \m{i} comes before \m{j}, if the \m{i}-th element of \m{l} is \m{n} and the \m{j}-th element of \m{l} is \m{m}, then \m{n} is less than or equal to \m{m}. This definition looks quite correct (and it is), but it won't serve us well. This is because it defies the second part of our advice \#0 -- it is not easy to use. The reason why will be rather elusive for people who are not Coq experts,\footnote{Knowing at first sight that a definition like this one will later turn out to be quite clumsy requires precisely the kind of insight mentioned before that can't be packed into a repetitive, mindless technique.} but we will nonetheless try to give an appealing argument.
 
 The problem with this definition is that it is a \textit{patchwork} definition -- it is made up of various ingredients that don't fit together perfectly. The first ingredient is universal quantification over two natural numbers. The quantifier itself is fine, as are the numbers, but problems start with the hypothesis \m{n <= m}.
 
@@ -728,7 +728,7 @@ With these improved types our template doesn't change a lot, but the user experi
 
 \section{Boolean blindness vs evidence-based programming}
 
-The new template, thoroughly tested for user experience, will soon turn out to be good enough. But user experience is not the only way of checking whether the template makes sense. In our case, we could have arrived at the same conclusions from a completely different angle, which I will call \textit{evidence-based programming}.\footnote{This is a term I coined for the purpose of this thesis. Of course it is a pun on all the ``evidence-based X'', like evidence-based medicine or evidence-based policy.} It roughly corresponds to the part of our abstract about ``representing flow of information in a proof using types'', but we will consider the flow of information in a program, not a proof.
+The new template, thoroughly tested for user experience, will soon turn out to be good enough. But user experience is not the only way of checking whether the template makes sense. In our case, we could have arrived at the same conclusions from a completely different angle, which we will call \textit{evidence-based programming}.\footnote{This is a term I coined for the purpose of this thesis. Of course it is a pun on all the ``evidence-based X'', like evidence-based medicine or evidence-based policy.} It roughly corresponds to the part of our abstract about ``representing flow of information in a proof using types'', but we will consider the flow of information in a program, not a proof.
 
 Before we see how to use this new concept to improve our original template, we will first have to meet the problem it solves, called \textit{boolean blindness}, a dangerous disease that often afflicts programmers trasitioning from imperative to functional. We will also develop a conceptual framework which allows to understand these two in a deeper sense and link them with other related things, like the \textit{small-scale reflection} proof methodology or \textit{intrinsic and extrinsic typing} in lambda calculus.
 
@@ -801,15 +801,13 @@ This is because, in accordance with concept/technique \#2, we ignored the matter
 
 \section{The inductive domain method} \label{inductivedomain}
 
-% TODO
+How do we prove that our algorithm terminates? Before we tackle this question, let's first recall \textit{why} we have to prove it. The only form of recursion allowed in Coq is \textit{structural recursion}, i.e. one in which recursive calls are made on subterms of the principal argument. Because terms are finite,\footnote{To be more precise, they are trees of finite height, but their width can be arbitrary.} this guarantees that all structurally recursive programs terminate and termination guarantees the consistency of Coq's logic.\footnote{``Termination'' is an informal term which means the same thing as ``strong normalization''. Recall that we proved that type theory is consistent in section \ref{mltt}.} Thus, on the one hand, the restriction to structural recursion protects us from contradiction (and from other evils too), but on the other hand it can be quite inconvenient from the pragmatic programmer's point of view.
 
-How do we prove that our algorithm terminates? Before we tackle this question, let's first recall \textit{why} we have to prove it: the only form of recursion allowed in Coq is \textit{structural recursion}, i.e. one in which recursive calls are made on subterms of the principal argument. Because terms are finite, this guarantees that all structurally recursive programs terminate and from termination follows the consistency of Coq's logic.\footnote{To be more precise, consistency (i.e. we can't prove \m{False}) follows from strong normalization (which says that all terms have a normal form, i.e. all } Thus, on the one hand, the restriction to structural recursion protects us from contradiction (and from other evils too), but on the other hand it can be quite inconvenient from the pragmatic programmer's point of view.
-
-Structural recursion is to be contrasted with \textit{general recursion}, found in most programming languages, in which arguments of recursive calls can be arbitrary. This is very convenient for the pragmatic programmer, because it doesn't constrain him at all, but renders the language inconsistent as a logic, and thus absolutely useless for formal reasoning.\footnote{Note, however, that an inconsistent language can still be useful for the purpose of \textit{rigorous} reasoning. See \cite{FastAndLoose} for details.} Consider Haskell's \m{Void} type, for example, which is supposed to be empty, just like its Coq equivalent \m{False}. There is no direct way of making an element of \m{Void}, but using general recursion we can easily define a nonterminating function \m{f\ ::\ a -> Void} (for example by setting \m{f x = f x}), which we can then use to obtain an element of \m{Void} (for example \m{f ()\ ::\ Void}).
+Structural recursion is to be contrasted with \textit{general recursion}, found in most programming languages, in which arguments of recursive calls can be arbitrary. This is very convenient for the pragmatic programmer, because it doesn't constrain him at all, but it also renders the language inconsistent as a logic and thus absolutely useless for formal reasoning.\footnote{Note, however, that an inconsistent language can still be useful for the purpose of \textit{rigorous} reasoning. See \cite{FastAndLoose} for details.} For example, consider the proposition \m{False}, which in Coq also doubles as the empty type, because it has no constructors and thus no direct way to be proven. Using general recursion we could easily define a nonterminating function \m{f\ :\ True -> False} by setting \m{f x := f x}, which we could then call with a proof of \m{True} to obtain an proof of \m{False}.
 
 \concept{Define a predicate that represents the shape of recursion in the algorithm and use it to implement a better template.}
 
-Back to our (almost) initial question: we need to prove termination because only structural recursion is allowed and our algorithm is not structurally recursive. As for the truly initial question of how to do it, the answer is provided by the above technique which I will call the \textit{inductive domain method}. It might look like a revelation at first, but in hindsight it couldn't have been more obvious. This technique basically tells us to represent general recursion on some type by structural recursion on a special type crafted precisely for this purpose. By doing that we get a new template which is guaranteed to terminate when filled in. There's a caveat, however: we changed the type of our algorithm, so what we got is not what we initially wanted. To implement the original algorithm, we will have to do some more work.
+Back to our (almost) initial question: we need to prove termination because only structural recursion is allowed and our algorithm is not structurally recursive. As for the truly initial question of how to do it, the answer is provided by the above technique which we will call the \textit{inductive domain method}. It might look like a revelation at first, but in hindsight it couldn't have been more obvious. This technique basically tells us to represent general recursion on some type by structural recursion on a special type crafted precisely for this purpose. By doing that we get a new template which is guaranteed to terminate when filled in. There's a caveat, however: we changed the type of our algorithm, so what we got is not what we initially wanted. To implement the original algorithm, we will have to do some more work.
 
 \inputminted
 [
@@ -863,7 +861,7 @@ As for the second inequality, \m{rest} was obtained from \m{h\ ::\ t} by choosin
 
 And so we proceed by... well, we don't proceed anymore. We are stuck because we have no evidence to back up our reasoning from the previous one and a half paragraphs. The reason is simple: there's nothing in \m{QSArgs} guaranteeing that \m{short}, \m{choosePivot} and \m{partition} don't produce gibberish.
 
-\concept{When proving termination by well-founded induction, assume that every property and lemma you need is in fact given and add them to the algorithm template.}
+\concept{When proving termination by well-founded induction, assume every property and lemma required for the proof to go through by adding them to the algorithm template.}
 
 But the beauty of mathematics in general and of our approach to algorithms in particular is that we can just assume everything we need and call it a day! Therefore it suffices to introduce a new variant of \m{QSArgs} which will provide us with all the lemmas we need -- its definition is shown in the listing below.
 
@@ -876,7 +874,7 @@ But the beauty of mathematics in general and of our approach to algorithms in pa
 ]
 {Coq}{Snippets/ProveTermination.v}
 
-Coming up with the proper definition of \m{TerminatingQSArgs} is straightforward: start with a class that has a single field which accomodates the original \m{QSArgs} and then successively add all the lemmas and properties needed to finish the termination proof. Don't forget about the coercion, so that elements of \m{TerminatingQSArgs} can be used in all places where an element of \m{QSArgs} is expected.
+Coming up with the proper definition of \m{TerminatingQSArgs} is straightforward. Start with a class that has a single field which accomodates the original \m{QSArgs}. Don't forget to declare a coercion, so that elements of \m{TerminatingQSArgs} can be used in all places where an element of \m{QSArgs} is expected. Then attempt to prove termination. Each time you are stuck, augment the definition of \m{TerminatingQSArgs} with a lemma that will make the proof go through. After you are done, try to minimize the number of assumptions by deriving some of these lemmas from others.
 
 \inputminted
 [
@@ -1105,7 +1103,7 @@ But not all functions are as tame as quicksort -- some tougher classes of functi
 
 Another not-so-tame class of recursive functions that do not easily submit to our technique for deriving the functional induction principle are functions that exhibit \textit{higher-order recursion}, i.e. a situation in which the recursive calls are partially applied.\footnote{Coq can recognize basic functions of this kind (like \m{map} for a tree that can have a \m{list} of subtrees) as structurally recursive without any help from the user, but this relies on some heuristics in the termination checker and is not very reliable.} This time the problem is defining the inductive graph itself: we either have to define an additional inductive graph relation for each of the partially applied recursive calls\footnote{This is pretty much equivalent to the inductive graph of a variant of the function in which the higher-order recursive calls were replaced by first-order helper functions.} or at least an additional inductive graph relation for each function which takes the recursively defined function as argument. Either way this means a lot of additional work to be done, most of which is writing boring boilerplate code. In practice the situation is even worse than it sounds, because the automation we will see in section \ref{automate} often can't generate these definitions automatically.
 
-Before we finish, let's try to trace the history of functional induction. The term originated as a name for a Coq tactic in \cite{FunInd} and isn't widely known. Coq is most likely the only place where it is used -- searching Google for ``functional induction'' returns mostly Coq-related papers and Coq documentation pages intermixed with results in which the words ``functional'' and ``induction'' appear together but have unrelated meanings. I think that the technique itself doesn't have a standard name and trying to look it up on Wikipedia is also hopeless.
+Before we finish, let's try to trace the history of functional induction. The term originated as a name for a Coq tactic in \cite{FunInd} and isn't widely known. Coq is most likely the only place where it is used -- searching Google for ``functional induction'' returns mostly Coq-related papers and Coq documentation pages intermixed with results in which the words ``functional'' and ``induction'' appear together but have unrelated meanings. The technique itself seems not to have a standard name and trying to look it up on Wikipedia is also hopeless.
 
 The core idea, i.e. separating the concrete implementation of a function from reasoning about its input-output behaviour, was first described\footnote{This is the earliest example I could find.} by Burstall in \cite{Burstall}, but this work is not very well-known. Since then it was independently reinvented many times by many people, for example in \cite{Slind}, \cite{FromTheLeft} and \cite{Program}, which shows that the idea is quite intuitive and natural. In the context of Coq, the technique derived from the idea arose slowly in works that dealt with automating the definition of and reasoning about general recursive functions and culminated as an important part of the \m{Function} \cite{Function} command, a tool designed precisely for this purpose (although variants of the technique used there may differ from the one presented in this thesis).
 
@@ -1433,40 +1431,49 @@ It would also be worth exploring how other algorithmic activities described in s
 
 \bibitem{CLRS}
     Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, Clifford Stein, \\
-    \href{http://ressources.unisciel.fr/algoprog/s00aaroot/aa00module1/res/%5BCormen-AL2011%5DIntroduction_To_Algorithms-A3.pdf}{\textit{Introduction to Algorithms}}
+    \href{http://ressources.unisciel.fr/algoprog/s00aaroot/aa00module1/res/%5BCormen-AL2011%5DIntroduction_To_Algorithms-A3.pdf}{\textit{Introduction to Algorithms}},
+    1990
 
 \bibitem{TAOCP}
     Donald Knuth,
-    \textit{The Art of Computer Programming}
+    \textit{The Art of Computer Programming},
+    1968
 
 \bibitem{Kuhn}
     Thomas S. Kuhn,
-    \textit{The Structure of Scientific Revolutions}
+    \textit{The Structure of Scientific Revolutions},
+    1962
 
 \bibitem{WordsMatter}
     Robert Harper,
-    \href{https://existentialtype.wordpress.com/2012/02/01/words-matter/}{\textit{Words Matter}}, 2012, \\
+    \href{https://existentialtype.wordpress.com/2012/02/01/words-matter/}{\textit{Words Matter}},
+    2012, \\
     \wayback{https://web.archive.org/web/20210320001018/https://existentialtype.wordpress.com/2012/02/01/words-matter/}
 
 \bibitem{PersistentDataStructures}
     Driscoll JR, Sarnak N, Sleator DD, Tarjan RE \\
-    \textit{Making data structures persistent}, 1986
+    \textit{Making data structures persistent},
+    1986
 
 \bibitem{FunctionalUnionFind}
     Sylvain Conchon, Jean-Christophe Fillâtre, \\
-    \href{https://www.lri.fr/~filliatr/ftp/publis/puf-wml07.pdf}{\textit{A Persistent Union-Find Data Structure}}, 2007
+    \href{https://www.lri.fr/~filliatr/ftp/publis/puf-wml07.pdf}{\textit{A Persistent Union-Find Data Structure}},
+    2007
 
 \bibitem{Pippenger}
     Nicholas Pippenger,
-    \href{https://www.cs.princeton.edu/courses/archive/fall03/cs528/handouts/Pure%20Versus%20Impure%20LISP.pdf}{\textit{Pure versus impure Lisp}}, 1996
+    \href{https://www.cs.princeton.edu/courses/archive/fall03/cs528/handouts/Pure%20Versus%20Impure%20LISP.pdf}{\textit{Pure versus impure Lisp}},
+    1996
 
 \bibitem{STMonad}
     John Launchbury, Simon Peyton Jones, \\
-    \href{https://www.microsoft.com/en-us/research/wp-content/uploads/1994/06/lazy-functional-state-threads.pdf}{\textit{Lazy Functional State Threads}}, 1994
+    \href{https://www.microsoft.com/en-us/research/wp-content/uploads/1994/06/lazy-functional-state-threads.pdf}{\textit{Lazy Functional State Threads}},
+    1994
 
 \bibitem{ProofByContradiction}
     Andrej Bauer,
-    \href{http://math.andrej.com/2010/03/29/proof-of-negation-and-proof-by-contradiction/}{\textit{Proof of negation and proof by contradiction}}, 2010, \\
+    \href{http://math.andrej.com/2010/03/29/proof-of-negation-and-proof-by-contradiction/}{\textit{Proof of negation and proof by contradiction}},
+    2010, \\
     \wayback{https://web.archive.org/web/20201109002956/http://math.andrej.com/2010/03/29/proof-of-negation-and-proof-by-contradiction/}
 
 \bibitem{Coq}
@@ -1474,35 +1481,43 @@ It would also be worth exploring how other algorithmic activities described in s
 
 \bibitem{CurryHoward}
     Morten Heine Sørensen, Paweł Urzyczyn, \\
-    \href{http://disi.unitn.it/~bernardi/RSISE11/Papers/curry-howard.pdf}{\textit{Lectures on the Curry-Howard Isomorphism}}, 2006
+    \href{http://disi.unitn.it/~bernardi/RSISE11/Papers/curry-howard.pdf}{\textit{Lectures on the Curry-Howard Isomorphism}},
+    2006
 
 \bibitem{CoqInCoq}
     Bruno Barras, Benjamin Werner,
-    \href{http://www.lix.polytechnique.fr/Labo/Bruno.Barras/publi/coqincoq.pdf}{\textit{Coq in Coq}}, 1997
+    \href{http://www.lix.polytechnique.fr/Labo/Bruno.Barras/publi/coqincoq.pdf}{\textit{Coq in Coq}},
+    1997
 
 \bibitem{CoqCoqCorrect}
     Matthieu Sozeau, Simon Boulier, Yannick Forster, Nicolas Tabareau, Théo Winterhalter, \\
-    \href{https://www.irif.fr/~sozeau/research/publications/drafts/Coq_Coq_Correct.pdf}{\textit{Coq Coq Correct! Verification of Type Checking and Erasure for Coq, in Coq}}, 2020
+    \href{https://www.irif.fr/~sozeau/research/publications/drafts/Coq_Coq_Correct.pdf}{\textit{Coq Coq Correct! Verification of Type Checking and Erasure for Coq, in Coq}},
+    2020
 
 \bibitem{Turing}
     Alan Turing, \\
-    \href{https://www.cs.virginia.edu/~robins/Turing_Paper_1936.pdf}{\textit{On Computable Numbers, with an Application to the Entscheidungsproblem}}, 1936
+    \href{https://www.cs.virginia.edu/~robins/Turing_Paper_1936.pdf}{\textit{On Computable Numbers, with an Application to the Entscheidungsproblem}},
+    1936
 
 \bibitem{Church}
     Alonzo Church,
-    \href{https://www.ics.uci.edu/~lopes/teaching/inf212W12/readings/church.pdf}{\textit{An Unsolvable Problem of Elementary Number Theory}}, 1936
+    \href{https://www.ics.uci.edu/~lopes/teaching/inf212W12/readings/church.pdf}{\textit{An Unsolvable Problem of Elementary Number Theory}},
+    1936
 
 \bibitem{OtherTuringMachine}
-    Guy Blelloch, Robert Harper, \\
-    \href{https://www.cs.cmu.edu/~rwh/papers/lctotm/cs50.pdf}{\textit{$\lambda$-Calculus: The Other Turing Machine}}, 2015
+    Guy Blelloch, Robert Harper,
+    \href{https://www.cs.cmu.edu/~rwh/papers/lctotm/cs50.pdf}{\textit{$\lambda$-Calculus: The Other Turing Machine}},
+    2015
 
 \bibitem{ReasonableMachine}
     Ugo Dal Lago, Simone Martini, \\
-    \href{https://www.di.unito.it/~deligu/CDR60_TCS/Martini.pdf}{\textit{The Weak Lambda Calculus as a Reasonable Machine}}, 2008
+    \href{https://www.di.unito.it/~deligu/CDR60_TCS/Martini.pdf}{\textit{The Weak Lambda Calculus as a Reasonable Machine}},
+    2008
 
 \bibitem{ICC1}
     Ugo Dal Lago, \\
-    \href{http://cs.unibo.it/~dallago/FICQRA/esslli.pdf}{\textit{A Short Introduction to Implicit Computational Complexity}}, 2010
+    \href{http://cs.unibo.it/~dallago/FICQRA/esslli.pdf}{\textit{A Short Introduction to Implicit Computational Complexity}},
+    2010
 
 \bibitem{ICC2}
     Ugo Dal Lago,
@@ -1511,24 +1526,29 @@ It would also be worth exploring how other algorithmic activities described in s
 
 \bibitem{CostSemanticsBlog}
     Robert Harper,
-    \href{https://existentialtype.wordpress.com/2011/03/16/languages-and-machines/}{\textit{Languages and Machines}}, 2015, \\
+    \href{https://existentialtype.wordpress.com/2011/03/16/languages-and-machines/}{\textit{Languages and Machines}},
+    2015, \\
     \wayback{https://web.archive.org/web/20210320001331/https://existentialtype.wordpress.com/2011/03/16/languages-and-machines/}
 
 \bibitem{CostSemantics}
     Norman Danner, Daniel R. Licata, Ramyaa Ramyaa \\
-    \href{https://dlicata.wescreates.wesleyan.edu/pubs/dlr15inductive/dlr15inductive.pdf}{\textit{Denotational Cost Semantics for Functional Languages with Inductive Types}}, 2015
+    \href{https://dlicata.wescreates.wesleyan.edu/pubs/dlr15inductive/dlr15inductive.pdf}{\textit{Denotational Cost Semantics for Functional Languages with Inductive Types}},
+    2015
 
 \bibitem{CoC}
-    Thierry Coquand, Gérard Huet, \\
-    \href{https://www.sciencedirect.com/science/article/pii/0890540188900053}{\textit{The calculus of constructions}}, 1984
+    Thierry Coquand, Gérard Huet,
+    \href{https://www.sciencedirect.com/science/article/pii/0890540188900053}{\textit{The calculus of constructions}},
+    1984
 
 \bibitem{CIC}
     Christine Paulin-Mohring, \\
-    \href{https://hal.inria.fr/hal-01094195/document}{\textit{Introduction to the Calculus of Inductive Constructions}}, 2015
+    \href{https://hal.inria.fr/hal-01094195/document}{\textit{Introduction to the Calculus of Inductive Constructions}},
+    2015
 
 \bibitem{pCuIC}
     Amin Timany, Matthieu Sozeau, \\
-    \href{https://hal.inria.fr/hal-01615123v2/document}{\textit{Consistency of the Predicative Calculus of Cumulative Inductive Constructions (pCuIC)}}, 2018
+    \href{https://hal.inria.fr/hal-01615123v2/document}{\textit{Consistency of the Predicative Calculus of Cumulative Inductive Constructions (pCuIC)}},
+    2018
 
 \bibitem{MLTT1}
     Per Martin-L\"{o}f,
@@ -1536,12 +1556,14 @@ It would also be worth exploring how other algorithmic activities described in s
 
 \bibitem{MLTT2}
     Per Martin-L\"{o}f,
-    \href{https://archive-pml.github.io/martin-lof/pdfs/Bibliopolis-Book-retypeset-1984.pdf}{\textit{Intuitionistic Type Theory}}, 1984
+    \href{https://archive-pml.github.io/martin-lof/pdfs/Bibliopolis-Book-retypeset-1984.pdf}{\textit{Intuitionistic Type Theory}},
+    1984
 
 \bibitem{Hofmann}
     Martin Hofmann,
     \href{https://www.tcs.ifi.lmu.de/mitarbeiter/martin-hofmann/pdfs/syntaxandsemanticsof-dependenttypes.pdf}{\textit{Syntax and Semantics of Dependent
-    Types}}, 1997
+    Types}},
+    1997
 
 \bibitem{HoTTBook}
     The Univalent Foundations Program, \\
@@ -1549,32 +1571,37 @@ It would also be worth exploring how other algorithmic activities described in s
     2013
 
 \bibitem{Overlapping}
-    Jesper Cockx, \\
-    \href{https://www.scriptiebank.be/sites/default/files/webform/scriptie/masterpaper_5.pdf}{\textit{Overlapping and order-independent patterns in type theory}}, 2013
+    Jesper Cockx,
+    \href{https://www.scriptiebank.be/sites/default/files/webform/scriptie/masterpaper_5.pdf}{\textit{Overlapping and order-independent patterns in type theory}},
+    2013
 
 \bibitem{HoTTBlog}
     Michael Shulman, \\
-    \href{https://homotopytypetheory.org/2014/06/08/hiru-tdd/}{\textit{Higher inductive-recursive univalence and type-directed definitions}}, 2014, \\
+    \href{https://homotopytypetheory.org/2014/06/08/hiru-tdd/}{\textit{Higher inductive-recursive univalence and type-directed definitions}},
+    2014, \\
     \wayback{https://web.archive.org/web/20210515160716/https://homotopytypetheory.org/2014/06/08/hiru-tdd/}
 
 \bibitem{Idris2}
-    Idris 2 documentation, \\
-    \href{https://idris2.readthedocs.io/en/latest/tutorial/multiplicities.html}{\textit{Docs » A Crash Course in Idris 2 » Multiplicities}}, 2021, \\
+    Idris 2 documentation,
+    \href{https://idris2.readthedocs.io/en/latest/tutorial/multiplicities.html}{\textit{Docs » A Crash Course in Idris 2 » Multiplicities}},
+    2021, \\
     \wayback{https://web.archive.org/web/20210515164227/https://idris2.readthedocs.io/en/latest/tutorial/multiplicities.html}
 
 \bibitem{Eta}
     Ansten Klev,
-    \href{https://philpapers.org/rec/KLEEIM}{\textit{Eta-rules in Martin-L\"{o}f type theory}}, 2019
+    \href{https://philpapers.org/rec/KLEEIM}{\textit{Eta-rules in Martin-L\"{o}f type theory}},
+    2019
 
 \bibitem{Polarity}
     Robert Harper,
     \href{https://existentialtype.wordpress.com/2012/08/25/polarity-in-type-theory/}{\textit{Polarity in Type Theory}},
-    2012,
+    2012, \\
     \wayback{https://web.archive.org/web/20210601212646/https://existentialtype.wordpress.com/2012/08/25/polarity-in-type-theory/}
 
 \bibitem{Danielsson}
     Nils Anders Danielsson, \\
-    \href{http://www.cse.chalmers.se/~nad/publications/danielsson-types2006.pdf}{\textit{A Formalisation of a Dependently Typed Language as an Inductive-Recursive Family}}, 2006
+    \href{http://www.cse.chalmers.se/~nad/publications/danielsson-types2006.pdf}{\textit{A Formalisation of a Dependently Typed Language as an Inductive-Recursive Family}},
+    2006
 
 \bibitem{EatItself}
     James Chapman,
@@ -1587,16 +1614,19 @@ It would also be worth exploring how other algorithmic activities described in s
     1994
 
 \bibitem{SoftwareFoundations}
-    Benjamin C. Pierce, Andrew W. Appel et al., \\
-    \href{https://softwarefoundations.cis.upenn.edu/}{\textit{Software Foundations}}, 2019
+    Benjamin C. Pierce, Andrew W. Appel et al.,
+    \href{https://softwarefoundations.cis.upenn.edu/}{\textit{Software Foundations}},
+    2019
 
 \bibitem{CoqArt}
     Yves Bertot and Pierre Castéran, \\
-    \href{https://www.labri.fr/perso/casteran/CoqArt/}{\textit{Interactive Theorem Proving and Program Development \\ Coq'Art: The Calculus of Inductive Constructions}}, 2004
+    \href{https://www.labri.fr/perso/casteran/CoqArt/}{\textit{Interactive Theorem Proving and Program Development \\ Coq'Art: The Calculus of Inductive Constructions}},
+    2004
 
 \bibitem{CPDT}
     Adam Chlipala,
-    \href{http://adam.chlipala.net/cpdt/}{\textit{Certified Programming with Dependent Types}}
+    \href{http://adam.chlipala.net/cpdt/}{\textit{Certified Programming with Dependent Types}},
+    2013
 
 \bibitem{Okasaki}
     Chris Okasaki,
@@ -1610,16 +1640,19 @@ It would also be worth exploring how other algorithmic activities described in s
 
 \bibitem{Okasaki10YearsLater}
     Chris Okasaki,
-    \href{https://okasaki.blogspot.com/2008/02/ten-years-of-purely-functional-data.html}{\textit{Ten Years of Purely Functional Data Structures}}, 2008, \\
+    \href{https://okasaki.blogspot.com/2008/02/ten-years-of-purely-functional-data.html}{\textit{Ten Years of Purely Functional Data Structures}},
+    2008, \\
     \wayback{https://web.archive.org/web/20210320001420/https://okasaki.blogspot.com/2008/02/ten-years-of-purely-functional-data.html}
 
 \bibitem{SinceOkasaki}
-    \href{https://cstheory.stackexchange.com/questions/1539/whats-new-in-purely-functional-data-structures-since-okasaki}{\textit{What's new in purely functional data structures since Okasaki?}}, \\
+    \href{https://cstheory.stackexchange.com/questions/1539/whats-new-in-purely-functional-data-structures-since-okasaki}{\textit{What's new in purely functional data structures since Okasaki?}},
+    2010, \\
     \wayback{https://web.archive.org/web/20210320001519/https://cstheory.stackexchange.com/questions/1539/whats-new-in-purely-functional-data-structures-since-okasaki}
 
 \bibitem{VFA}
     Andrew W. Appel,
-    \href{https://softwarefoundations.cis.upenn.edu/vfa-current/index.html}{\textit{Verified Functional Algorithms}}, 2018
+    \href{https://softwarefoundations.cis.upenn.edu/vfa-current/index.html}{\textit{Verified Functional Algorithms}},
+    2018
 
 \bibitem{DefunctionalizationLight}
     James Koppel,
@@ -1666,26 +1699,31 @@ It would also be worth exploring how other algorithmic activities described in s
 
 \bibitem{SSR1}
     Georges Gonthier, Assia Mahboubi, Enrico Tassi \\
-    \href{https://hal.inria.fr/inria-00258384v17/document}{\textit{A Small Scale Reflection Extension for the Coq system}}, 2016
+    \href{https://hal.inria.fr/inria-00258384v17/document}{\textit{A Small Scale Reflection Extension for the Coq system}},
+    2016
 
 \bibitem{SSR2}
     \url{https://coq.inria.fr/refman/proof-engine/ssreflect-proof-language.html}
-    
+
 \bibitem{MCB}
     Assia Mahboubi and Enrico Tassi with contributions by Yves Bertot and Georges Gonthier, \\
-    \href{https://math-comp.github.io/mcb/}{\textit{Mathematical Components}}, 2018
+    \href{https://math-comp.github.io/mcb/}{\textit{Mathematical Components}},
+    2018
 
 \bibitem{4CT1}
     Georges Gonthier,
-    \href{https://www.cl.cam.ac.uk/~lp15/Pages/4colproof.pdf}{\textit{A computer-checked proof of the Four Colour Theorem}}, 2005
+    \href{https://www.cl.cam.ac.uk/~lp15/Pages/4colproof.pdf}{\textit{A computer-checked proof of the Four Colour Theorem}},
+    2005
 
 \bibitem{4CT2}
     Georges Gonthier,
-    \href{http://www.ams.org/notices/200811/tx081101382p.pdf}{\textit{Formal Proof -- The Four-Color Theorem}}, 2008
+    \href{http://www.ams.org/notices/200811/tx081101382p.pdf}{\textit{Formal Proof -- The Four-Color Theorem}},
+    2008
 
 \bibitem{FastAndLoose}
     Nils Anders Danielsson, John Hughes, Patrik Jansson, Jeremy Gibbons, \\
-    \href{https://www.cs.ox.ac.uk/jeremy.gibbons/publications/fast+loose.pdf}{\textit{Fast and Loose Reasoning is Morally Correct}}, 2006
+    \href{https://www.cs.ox.ac.uk/jeremy.gibbons/publications/fast+loose.pdf}{\textit{Fast and Loose Reasoning is Morally Correct}},
+    2006
 
 \bibitem{BCM1}
     Ana Bove,
@@ -1718,12 +1756,12 @@ It would also be worth exploring how other algorithmic activities described in s
     2005
 
 \bibitem{BCM7}
-    Ana Bove and Venanzio Capretta, \\
+    Ana Bove and Venanzio Capretta,
     \href{https://www.researchgate.net/publication/220727479_Computation_by_Prophecy}{\textit{Computation by Prophecy}},
     2007
 
 \bibitem{BCM8}
-    Ana Bove and Venanzio Capretta, \\
+    Ana Bove and Venanzio Capretta,
     \href{https://www.researchgate.net/publication/221302295_A_Type_of_Partial_Recursive_Functions}{\textit{A Type of Partial Recursive Functions}},
     2008
 
@@ -1836,12 +1874,14 @@ It would also be worth exploring how other algorithmic activities described in s
 
 \bibitem{AnalyticCombinatorics}
     Philippe Flajolet and Robert Sedgewick,
-    \href{https://ac.cs.princeton.edu/home/AC.pdf}{\textit{Analytic Combinatorics}}, 2011, \\
+    \href{https://ac.cs.princeton.edu/home/AC.pdf}{\textit{Analytic Combinatorics}},
+    2011, \\
     also see the accompanying booksite \url{https://ac.cs.princeton.edu/home/}
 
 \bibitem{SF4}
     Leonidas Lampropoulos and Benjamin C. Pierce, \\
-    \href{https://softwarefoundations.cis.upenn.edu/qc-current/Preface.html}{\textit{Software Foundations Volume 4. QuickChick: Property-Based Testing in Coq}}
+    \href{https://softwarefoundations.cis.upenn.edu/qc-current/Preface.html}{\textit{Software Foundations Volume 4. QuickChick: Property-Based Testing in Coq}},
+    2021
 
 \end{thebibliography}
 
