--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -1331,7 +1331,7 @@ We are almost done with our formally correct quicksort. The last step that separ
 
 Our concrete proofs are shown in the listing above. We want to prove that \m{TQSA\_default}, the default implementation we defined in section \ref{sanity2}, is correct. To do this, we define an instance of \m{VerifiedQSArgs} that extends  \m{TQSA\_default}. Because the latter is parameterized with a comparison function \m{p :\ A -> A -> bool}, we need the same parameters for \m{VQSA\_default}.
 
-We can then define the order relation with respect to which the output will be sorted as \m{R x y := p x y = true} -- we are esentially turning our comparison function into a relation. Next, we need to provide a proof that our relation is reflexive, but functions of type \m{A -> A -> bool} in general don't need to have this property, so we need to assume it. Last but not least, it only makes sense to sort using a comparison function which guarantees that the order is total, i.e. \m{p x y = true} or \m{p y x = true}, which we express in a more convenient way as \m{p x y = false -> p y x = true}. Interestingly, we didn't need to assume totality during our proof by admission, but it turns out to be need for one the concrete proofs.
+We can then define the order relation with respect to which the output will be sorted as \m{R x y := p x y = true} -- we are esentially turning our comparison function into a relation. Next, we need to provide a proof that our relation is reflexive, but functions of type \m{A -> A -> bool} in general don't need to have this property, so we need to assume it. Last but not least, it only makes sense to sort using a comparison function which guarantees that the order is total, i.e. \m{p x y = true} or \m{p y x = true}, which we express in a more convenient way as \m{p x y = false -> p y x = true}. Interestingly, we didn't need to assume totality during our proof by admission, but it turns out to be needed for one of the concrete proofs.
 
 The proofs themselves are not terribly interesting, so we will not describe them in detail. In most cases it suffices to reason by inversion on the first hypothesis (which is always an equation like \m{short l = None}). If this is not enough, we reason by induction on the input list. When proving \m{Permutation\_partition}, we need to do some rewriting with standard library lemmas concerning \m{Permutation}. In the last proof we need to use the hypothesis \m{Htotal} at the right moment.
 
